--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.aft.hideandseek.app.SaveGameActivity"
+            android:label="@string/title_activity_save_game" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
