--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.aft.hideandseek.app.MapsActivity"
+            android:name="com.aft.hideandseek.app.CreateGameActivity"
             android:label="@string/title_activity_maps" >
         </activity>
 
@@ -35,6 +35,22 @@
         <activity
             android:name="com.aft.hideandseek.app.SaveGameActivity"
             android:label="@string/title_activity_save_game" >
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyD8qWe-ySu5grD8mlWymvJReTLJtyh9fpU" />
+
+        <activity
+            android:name="com.aft.hideandseek.app.PlayGameActivity"
+            android:label="@string/title_activity_play_game" >
+        </activity>
+        <activity
+            android:name="com.aft.hideandseek.app.SelectGameActivity"
+            android:label="@string/title_activity_select_game" >
         </activity>
     </application>
 
