--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         <activity
             android:name="com.aft.hideandseek.app.MainMenuActivity"
-            android:label="GMaps Hide and Seek" >
+            android:label="Find the World">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
